install model-viewer

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/cpetta/chrispetta.net/issues"
   },
-  "homepage": "chrispetta.net"
+  "homepage": "chrispetta.net",
+  "dependencies": {
+    "@google/model-viewer": "^1.3.0"
+  }
 }
