make all files lowercase

--- a/3DProjects/3DProjects.json
+++ b/3DProjects/3DProjects.json
@@ -2,7 +2,7 @@
     {
         "uniqueName": "Chair",
         "projectTitle": "Chair",
-        "folder": "Chair",
+        "folder": "chair",
         "titleImage": "chair.jpg",
         "model": "chair.glb",
         "date": "12/1/20",
@@ -24,8 +24,8 @@
     {
         "uniqueName": "Redbot",
         "projectTitle": "Red Robot",
-        "folder": "Redbot",
-        "titleImage": "redBot.jpg",
+        "folder": "redbot",
+        "titleImage": "redbot.jpg",
         "model": "redbot.glb",
         "date": "08/13/20",
         "size": "470MB",
@@ -35,27 +35,27 @@
         "mats": "7",
         "description": "This Red Robot is a 3D model of a friends drawing. The model was created and rendered in Blender, the textures were created in Substance Painter, the entire process took aproximately 50-60 hours.",
         "images": [
-            "redBot1.jpg",
-            "redBot2.jpg",
-            "redBot3.jpg",
-            "redBot4.jpg",
-            "redBot5.jpg"
+            "redbot1.jpg",
+            "redbot2.jpg",
+            "redbot3.jpg",
+            "redbot4.jpg",
+            "redbot5.jpg"
         ],
         "thumbnails": [
-            "redBot0.png",
-            "redBot1.png",
-            "redBot2.png",
-            "redBot3.png",
-            "redBot4.png",
-            "redBot5.png"
+            "redbot0.png",
+            "redbot1.png",
+            "redbot2.png",
+            "redbot3.png",
+            "redbot4.png",
+            "redbot5.png"
         ]
     },
 	{
         "uniqueName": "Stove",
         "projectTitle": "Cast Iron Stove",
-        "folder": "Stove",
-        "titleImage": "Stove.jpg",
-        "model": "Stove.glb",
+        "folder": "stove",
+        "titleImage": "stove.jpg",
+        "model": "stove.glb",
         "date": "6/25/20",
         "size": "244MB",
         "textureRez": "4K (4096x4096)",
@@ -64,21 +64,21 @@
         "mats": "4",
         "description": "This Cast iron stove is a 3D model that was created as a comission. The model was created and rendered in Blender, the textures were created in Substance Painter, the entire process took aproximately 20-30 hours.",
         "images": [
-            "Stove1.jpg",
-            "Stove2.jpg"
+            "stove1.jpg",
+            "stove2.jpg"
         ],
         "thumbnails": [
-            "Stove0.png",
-            "Stove1.png",
-            "Stove2.png"
+            "stove0.png",
+            "stove1.png",
+            "stove2.png"
         ]
     },
     {
         "uniqueName": "CatBed",
         "projectTitle": "Cat Bed",
-        "folder": "Catbed",
-        "titleImage": "catBed.jpg",
-        "model": "catBed.glb",
+        "folder": "catbed",
+        "titleImage": "catbed.jpg",
+        "model": "catbed.glb",
         "date": "06/30/20",
         "size": "18MB",
         "textureRez": "4K (4096x4096)",
@@ -87,21 +87,21 @@
         "mats": "8",
         "description": "This Cat Bed was created as a commission. The model was created and rendered in Blender, the textures were created in Substance Painter, the entire process took aproximately 30-40 hours.",
         "images": [
-            "catBed1.jpg",
+            "catbed1.jpg",
             "catbed2.jpg",
-            "catBed3.jpg"
+            "catbed3.jpg"
         ],
         "thumbnails": [
-            "catBed0.png",
-            "catBed1.png",
-            "catBed2.png",
-            "catBed3.png"
+            "catbed0.png",
+            "catbed1.png",
+            "catbed2.png",
+            "catbed3.png"
         ]
     },
     {
         "uniqueName": "Stairs",
         "projectTitle": "Industrial Stairs",
-        "folder": "Staircase",
+        "folder": "staircase",
         "titleImage": "stairs.jpg",
         "model": "stairs.glb",
         "date": "06/14/20",
@@ -126,9 +126,9 @@
     {
         "uniqueName": "YellowBot",
         "projectTitle": "Yellow Robot",
-        "folder": "YellowBot",
-        "titleImage": "yellowBot0.jpg",
-        "model": "yellowBot.glb",
+        "folder": "yellowbot",
+        "titleImage": "yellowbot0.jpg",
+        "model": "yellowbot.glb",
         "date": "04/29/20",
         "size": "4MB",
         "textureRez": "Procedural",
@@ -137,27 +137,27 @@
         "mats": "4",
         "description": "This Yellow Robot is a 3D model of a friends drawing. The model was created and rendered in Blender, the textures were created using blenders node editer, the entire process took aproximately 20-30 hours.",
         "images": [
-            "yellowBot0.jpg",
-            "yellowBot1.jpg",
-            "yellowBot2.jpg",
-            "yellowBot3.jpg",
-            "yellowBot4.jpg",
-            "yellowBot5.jpg"
+            "yellowbot0.jpg",
+            "yellowbot1.jpg",
+            "yellowbot2.jpg",
+            "yellowbot3.jpg",
+            "yellowbot4.jpg",
+            "yellowbot5.jpg"
         ],
         "thumbnails": [
-            "yellowBot00.png",
-            "yellowBot0.png",
-            "yellowBot1.png",
-            "yellowBot2.png",
-            "yellowBot3.png",
-            "yellowBot4.png",
-            "yellowBot5.png"
+            "yellowbot00.png",
+            "yellowbot0.png",
+            "yellowbot1.png",
+            "yellowbot2.png",
+            "yellowbot3.png",
+            "yellowbot4.png",
+            "yellowbot5.png"
         ]
     },
     {
         "uniqueName": "Foods",
         "projectTitle": "Various Foods",
-        "folder": "Foods",
+        "folder": "food",
         "titleImage": "foods.jpg",
         "model": "foods.glb",
         "date": "05/20/20 - 06/06/20",
